--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,3 +36,9 @@ jobs:
           ${code_list[$i]}
           EOF
           done
+     - name: Delete workflow runs
+       uses: Mattraks/delete-workflow-runs@main
+       with:
+         token: ${{ secrets.AUTH_PAT }}
+         repository: ${{ github.repository }}
+         retain_days: ${{ github.event.inputs.days }
