--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@main
         with:
-          token: ${{ secrets.AUTH_PAT }}
+          token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: ${{ github.event.inputs.days }
+          retain_days: 1
