update: serverless.yml

--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -18,7 +18,8 @@ jobs:
           echo "$CODE" > ./code.json
           chmod +x ./serverless/deploy.sh
           bash ./serverless/deploy.sh
-      - name: Delete Workflow Runs
+
+      - name: Delete Workflow Runs # 删除执行日志
           uses: Mattraks/delete-workflow-runs@main
           with:
             token: ${{ github.token }}
