update: serverless.yml

--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -19,10 +19,10 @@ jobs:
           chmod +x ./serverless/deploy.sh
           bash ./serverless/deploy.sh
 
-      - name: Delete Workflow Runs
-          uses: Mattraks/delete-workflow-runs@main
-          with:
-            token: ${{ github.token }}
-            repository: ${{ github.repository }}
-            retain_days: 1
-            keep_minimum_runs: 0
+      - name: Delete Workflow Runs # 删除执行日志
+        uses: Mattraks/delete-workflow-runs@main
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 1
+          keep_minimum_runs: 0
