--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -16,7 +16,7 @@ jobs:
           TENCENT_SECRET_KEY: ${{ secrets.TENCENT_SECRET_KEY }}
         run: |
           echo "$CODE" > ./code.json
-          chmod +x ./serverless/deploy.sh
+          sudo chmod +x ./serverless/deploy.sh
           bash ./serverless/deploy.sh
 
       - name: Delete Workflow Runs # 删除执行日志
