update:deploy.sh

--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -12,6 +12,7 @@ jobs:
       - name: 部署腾讯云函数
         env:
           CODE: ${{ secrets.CODE_JSON }}
+          SERVERLESS_PLATFORM_VENDOR: tencent
           TENCENT_SECRET_ID: ${{ secrets.TENCENT_SECRET_ID }}
           TENCENT_SECRET_KEY: ${{ secrets.TENCENT_SECRET_KEY }}
         run: |
