--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -8,7 +8,7 @@ name: checkin # (必选) 组件实例名称。
 inputs:
   name: ${app} # 云函数名称，默认为 ${name}-${stage}-${app}
   src: ./ # 项目代码路径，默认写法，新建特定命名的 COS Bucket 并上传
-  handler: auto_check.main #入口
+  handler: invite_user.main #入口
   runtime: Python3.6 # 运行环境 默认 Nodejs10.15
   region: ap-guangzhou # 函数所在区域
   description: 上下班签到脚本
