--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -12,6 +12,7 @@ inputs:
   runtime: Python3.6 # 运行环境 默认 Nodejs10.15
   region: ap-guangzhou # 函数所在区域
   description: 上下班签到脚本
+  timeout: 60
   environment: #  环境变量
     variables: #  环境变量对象
       TZ: Asia/Shanghai
