--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -1,5 +1,5 @@
 #应用组织信息（可选）
-app: invite_user# 应用名称。留空则默认取当前组件的实例名称为app名称。
+app: invite_user # 应用名称。留空则默认取当前组件的实例名称为app名称。
 # stage: '' # 环境名称。默认值是 dev。建议使用 ${env.STAGE} 变量定义环境名称
 #组件信息
 component: scf # (必选) 组件名称，在该实例中为 scf
@@ -11,7 +11,7 @@ inputs:
   handler: invite_user.main #入口
   runtime: Python3.6 # 运行环境 默认 Nodejs10.15
   region: ap-guangzhou # 函数所在区域
-  description: 上下班签到脚本
+  description: 基建通刷邀请
   timeout: 60
   environment: #  环境变量
     variables: #  环境变量对象
