--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,10 +1,8 @@
 name: 基建通刷邀请
 
 on:
-  schedule:
-    - cron: '0 1,10 * * *'
-  watch:
-    types: started
+  workflow_dispatch:
+
 
 jobs:
   build:
@@ -19,6 +17,7 @@ jobs:
           python-version: 3.7
       - name: 刷邀请
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
           code='${{ secrets.CODE}}'
